apps/bookstack/base/app/bookstack-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
spec:
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      # Max one pod per node.
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              weight: 100
              labelSelector:
                matchLabels:
                  app: bookstack

      containers:
      - name: bookstack
        image: lscr.io/linuxserver/bookstack:25.05.2
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "750m"
            memory: "1024Mi"
        ports:
          - containerPort: 80
            name: http
        startupProbe:
          httpGet:
            port: http
            path: /status
        readinessProbe:
          httpGet:
            port: http
            path: /status
        livenessProbe:
          httpGet:
            port: http
            path: /status
        volumeMounts:
          - mountPath: "/config"
            name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bookstack-pvc
