apps/bookstack/base/app/bookstack-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-svc
spec:
  selector:
    app: bookstack
  ports:
  - port: 80
    targetPort: http
    name: http
